feat: :construction: add basic write up sections

--- a/styles/variables.module.less
+++ b/styles/variables.module.less
@@ -9,6 +9,7 @@
 @error: #e63946;
 
 @primary-color: @darker; // primary color for all components
+@link-color: @dark;
 @info-color: @dark;
 @error-color: @error; // error state color
 
