feat: :sparkles: add recent type/gitmoji pickers

--- a/styles/variables.module.less
+++ b/styles/variables.module.less
@@ -56,4 +56,7 @@
   screenLG: @screen-lg;
   screenXL: @screen-xl;
   screenXXL: @screen-xxl;
+
+  itemActiveBG: @item-active-bg;
+  itemHoverBG: @item-hover-bg;
 }
