feat: 🎉 add shortcode toggle

--- a/styles/variables.module.less
+++ b/styles/variables.module.less
@@ -42,6 +42,11 @@
   warningColor: @warning-color;
   errorColor: @error-color;
 
+  primary1: @primary-1;
+  primary2: @primary-2;
+  primary3: @primary-3;
+  primary4: @primary-4;
+
   layoutHeaderHeight: unit(@layout-header-height);
   layoutFooterHeight: unit(@layout-footer-height);
 
@@ -58,5 +63,9 @@
   screenXXL: @screen-xxl;
 
   itemActiveBG: @item-active-bg;
+  itemActiveBGDark: darken(@item-active-bg, 5%, relative);
+
   itemHoverBG: @item-hover-bg;
+  itemHoverBGDark: darken(@item-hover-bg, 5%, relative);
+
 }
