refactor: :lipstick: change dropdown color

--- a/styles/variables.module.less
+++ b/styles/variables.module.less
@@ -5,7 +5,7 @@
 @darker: #1d3557;
 @dark: #457b9d;
 @light: #a8dadc;
-@lighter: #f1faee;
+@lighter: #E9E9E9;
 @error: #e63946;
 
 @primary-color: @darker; // primary color for all components
@@ -63,9 +63,5 @@
   screenXXL: @screen-xxl;
 
   itemActiveBG: @item-active-bg;
-  itemActiveBGDark: darken(@item-active-bg, 5%, relative);
-
   itemHoverBG: @item-hover-bg;
-  itemHoverBGDark: darken(@item-hover-bg, 5%, relative);
-
 }
