--- a/styles/variables.module.less
+++ b/styles/variables.module.less
@@ -5,7 +5,7 @@
 @darker: #1d3557;
 @dark: #457b9d;
 @light: #a8dadc;
-@lighter: #f1faee;
+@lighter: #E9E9E9;
 @error: #e63946;
 
 @primary-color: @darker; // primary color for all components
@@ -41,6 +41,11 @@
   successColor: @success-color;
   warningColor: @warning-color;
   errorColor: @error-color;
+
+  primary1: @primary-1;
+  primary2: @primary-2;
+  primary3: @primary-3;
+  primary4: @primary-4;
 
   layoutHeaderHeight: unit(@layout-header-height);
   layoutFooterHeight: unit(@layout-footer-height);
